--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://kegavakian:Hi_man124@cluster0.nnx8qx6.mongodb.net/?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://kegavakian:<PASSWORD>@cluster0.nnx8qx6.mongodb.net/?retryWrites=true&w=majority
 CANVAS_BASE_URL=canvas.wisc.edu
